# linkedin-auto-job-applier-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  web_server.py
config/: personal.py  questions.py  search.py  secrets.py  settings.py
config/schema/: personal_model.py  question_model.py  search_model.py  secrets_model.py  setting_model.py
setup/: setup.sh  windows-setup.bat  windows-setup.ps1
src/ai/: ai_manager.py  prompts.py
src/ai/clients/: deepseek_client.py  gemini_client.py  ollama_client.py  openai_client.py
src/browser/: driver_factory.py  interactors.py  scraper.py
src/core/: bot_engine.py  job_applier.py
src/core/question_handlers/: __init__.py  base_handler.py  checkbox_handler.py  radio_handler.py  select_handler.py  text_handler.py
src/data/: csv_manager.py
src/utils/: logger.py  text_helpers.py
templates/: index.html
