[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-auto-job-applier-ai"
version = "1.0.0"
description = "An automated AI-powered job application bot for LinkedIn."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Ajinkya Kardile"}
]
dependencies = [
    "setuptools>=82.0.1",
    "undetected-chromedriver>=3.5.0",
    "PyAutoGUI>=0.9.54",
    "selenium>=4.10.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]